--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/images/wolverine.png
+    - assets/images/wolverine_2.png
+    - assets/images/wolverine_3.png
+    - assets/images/wolverine_4.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
