--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   cached_network_image: ^3.2.2
   flutter_svg: ^1.1.6
+  device_preview: ^1.1.0
 
 dev_dependencies:
   flutter_test:
