--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   cached_network_image: ^3.2.2
   flutter_svg: ^1.1.6
   device_preview: ^1.1.0
+  faker: ^2.0.0
 
 dev_dependencies:
   flutter_test:
