--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter_svg: ^1.1.6
   device_preview: ^1.1.0
   faker: ^2.0.0
+  timeago: ^3.3.0
 
 dev_dependencies:
   flutter_test:
